# engage-desktop

./: README.md  meson.build  meson_post_install.sh
src/: meson.build
src/session/: engage-desktop.desktop.in  engage-desktop.in  engage-desktop.session.in  meson.build
src/wm/: engage-wm.c  engage-wm.desktop  engage-wm.h  main.c  meson.build
src/wm/backgrounds/: engage-background.c  engage-background.h
